<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A5CFB5"
        android:fitsSystemWindows="false"
        android:padding="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="start" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <EditText
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/search_by_description"
                android:background="@color/white"
                android:hint="@string/search_by_description"
                android:inputType="text"
                android:padding="5dp" />
            <Button
                android:id="@id/expand_search_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@android:drawable/ic_menu_more"
                android:backgroundTint="#000000"
                android:padding="30dp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/expanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A5CFB5"
            app:layout_anchor="@id/top"
            app:layout_anchorGravity="bottom"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expanded_search">
            </TextView>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/top"
        app:layout_anchorGravity="bottom"
        android:layout_gravity="bottom">
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A5CFB5"
        android:layout_gravity="bottom">
        <TextView
            android:id="@+id/ev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:paddingEnd="0dp"
            android:text="@string/estimated_value"
            android:textSize="25sp"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/estimated_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:paddingBottom="10dp"
            android:layout_toEndOf="@id/ev"
            android:layout_centerVertical="true"
            android:text="@string/_0_00">
        </TextView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:tint="@color/black"
            app:backgroundTint="#2D7038"
            app:rippleColor="#A5CFB5"
            app:srcCompat="@android:drawable/ic_input_add"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="15dp"/>
    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>